Fix font-weight and alignment issues in style.css

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   width: 100%;
   height: 100%;
   font-size: calc(var(--px, 1px) * 20);
+  font-weight: normal;
   /* overflow: hidden; */
 }
 
@@ -74,10 +75,13 @@ body {
 .table-row * {
   display: grid;
   place-content: center start;
-  padding: calc(var(--px, 1px) * 20);
+  padding: 0 0 0 calc(var(--px, 1px) * 41.78);
   border: calc(var(--px, 1px) * 1) solid #272727;
   border-left-width: 0;
   margin-left: calc(var(--px, 1px) * -1);
+  word-spacing: 9999px;
+  font-weight: 500;
+  text-align: left;
 }
 
 .table-row + .table-row * {
@@ -118,6 +122,7 @@ body {
   max-width: calc(100% - (var(--px, 1px) * 240));
   line-height: calc(var(--px, 1px) * 72);
   font-size: calc(var(--px, 1px) * 80);
+  font-weight: 600;
   color: #fff;
   text-align: left;
   text-transform: uppercase;
@@ -147,6 +152,7 @@ body {
   justify-content: center;
   z-index: 2;
   font-size: calc(var(--px, 1px) * 30);
+  font-weight: 600;
   color: #fff;
 }
 
@@ -253,6 +259,7 @@ body {
   line-height: calc(var(--px, 1px) * 38);
   overflow: hidden;
   text-overflow: ellipsis;
+  font-weight: 500;
 }
 
 .list {
@@ -320,6 +327,7 @@ body {
   align-items: flex-start;
   justify-content: flex-start;
   gap: calc(var(--px, 1px) * 12);
+  font-weight: 500;
 }
 .review-text {
   align-self: stretch;
